o code formatting o improved javadoc
git-svn-id: https://svn.apache.org/repos/asf/maven/archetype/trunk@925767 13f79535-47bb-0310-9956-ffa450edef68